--- a/img/img.yaml
+++ b/img/img.yaml
@@ -1,7 +1,7 @@
 # train and val data as 1) directory: path/images/, 2) file: path/images.txt, or 3) list: [path1/images/, path2/images/]
-train: /Users/yuukomazawa/Documents/python/objectdetect/img/train
-val: /Users/yuukomazawa/Documents/python/objectdetect/img/val
-test: /Users/yuukomazawa/Documents/python/objectdetect/img/test
+train: C:\Users\yuu komazawa\Desktop\objectdetect\img\train
+val: C:\Users\yuu komazawa\Desktop\objectdetect\img\val
+test: C:\Users\yuu komazawa\Desktop\objectdetect\img\test
 
 # number of classes
 nc: 2
